# Monmonde

./: .compilerc  .gitignore  COPYING.md  README.md  package.json  tsconfig.json  tslint.json
assets/: tileset.json
battle-proto/: .babelrc  .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
battle-proto/res/: charizard-back.json  nidoking.json  ui.json
battle-proto/src/: ambient.d.ts  index.html  index.tsx
chessdb-name-scraper/: chessdb_name_scraper.py
electron-compile-patch/: apply.sh  require-hook.js
monmonde-client/: package.json  tsconfig.json
monmonde-client/assets/: tileset.json
monmonde-client/electron-compile-live-reloading-patch/: README.md  apply.sh
monmonde-client/electron-compile-patch/: live-reload.js
monmonde-client/src/: Country.ts  ExplorationView.tsx  ExplorationZone.ts  GabenView.tsx  Game.tsx  GameStore.ts  GeographyStore.ts  Icon.tsx  Init.tsx  LocationView.tsx  MonGear.tsx  Sidebar.tsx  (+5 more)
monmonde-gaben/: README.md  index.ts  package.json  tsconfig.json
monmonde-game/: .compilerc  .gitignore  package.json
monmonde-map-generator/: index.ts  package.json
monmonde-utils/: index.ts  package.json
sim/: .gitignore  Cargo.toml  README.md
sim/monmonde_core/: Cargo.toml
sim/monmonde_core/src/: lib.rs  sim.rs  slotmap.rs
sim/monmonde_core/src/sim/: dump.rs  league.rs  person.rs  region.rs  trainer.rs
src/: ExplorationView.tsx  Game.tsx  GameStore.ts  Init.tsx  MonGear.tsx  MonGearStore.ts  RandomUtils.js  RandomUtils.ts  Sidebar.tsx  WorldMapView.tsx  index.html
(+123 files in other folders)
